ad ability to delete projects for a given id.
