# source/main/swagger/swagger.yaml
@@ -184,6 +184,25 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Project"
+    delete:
+      tags:
+        - "project"
+      summary: "delete a project by id"
+      description: "delete that project"
+      operationId: "deleteProject"
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: "project_id"
+          in: "path"
+          description: "ID of project to delete"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+
 
 
 components:
